--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -33,9 +33,9 @@
 	<meta property="og:image" content="/img/thumb.png">
 	<meta property="og:type" content="website">
 
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static '/main/style.css' %}">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek,greek-ext" rel="stylesheet">
+	<link rel="stylesheet" href="{% static '/main/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static '/main/css/style.css' %}">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek" rel="stylesheet">
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -47,8 +47,8 @@
 <body>
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/eng/index.html"><img src="{% static '/main/img/logo.png' %}" alt="Logo"></a>
-            <a class="" id="call" href="{% url 'main:apply' %}" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Apply</strong> for Autumn'17</a>
+            <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/logo.png' %}" alt="Logo"></a>
+            <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Apply</strong> for Autumn'17</a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -79,63 +79,65 @@
     {% endblock %}
 
     <footer class="site-footer">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row" id="social">
                 <a href="mailto:mail@okthess.gr" target="_blank"><img social src="{% static '/main/img/email.png' %}" alt="email"></a>
                 <a href="https://www.facebook.com/OKThess/" target="_blank"><img social src="{% static '/main/img/facebook.png' %}" alt="facebook"></a>
                 <a href="https://twitter.com/okthess" target="_blank"><img social src="{% static '/main/img/twitter.png' %}" alt="twitter"></a>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-4">
-                    <h5>LOCATION</h5>
-                    <hr>
-                        <div id="map-outer">
-                            <div id="map-container"></div>
-                            <script src="http://okthess.gr/js/map.js"></script>
-                        </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <h5>MEMBERS</h5><hr>
-                    <a href="https://www.auth.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/auth.jpg' %}" alt="Aristotle University Thessaloniki" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.thessaloniki.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/municipality.jpg' %}" alt="Municipality of Thessaloniki" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.uom.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/uom.png' %}" alt="University of Macedonia" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.thessinnozone.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/tiz.jpg' %}" alt="Thessaloniki Innovation Zone" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.teithe.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/ateith.jpg' %}" alt="Alexander Technological Institute Thessaloniki" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.sbbe.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/sbbe.jpg' %}" alt="SBBE" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.ihu.edu.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/ihu.jpg' %}" alt="International Hellenic University" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.seve.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/seve.jpg' %}" alt="SEVE" class="footer-content-item-img">
-                    </a>
+                <div class="site-footer-content">
+                    <div class="col-md-4 col-sm-4">
+                        <h5>LOCATION</h5>
+                        <hr>
+                            <div id="map-outer">
+                                <div id="map-container"></div>
+                                <script src="http://okthess.gr/js/map.js"></script>
+                            </div>
                     </div>
-                <div class="col-md-4 col-sm-4">
-                    <h5>SPONSORS</h5><hr>
-                    <a href="http://www.hcn.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/hcn.jpg' %}" alt="HCN" class="footer-content-item-img">
-                    </a>
-                    <a href="http://www.beetroot.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/beetroot.png' %}" alt="Beetroot" class="footer-content-item-img">
-                    </a>
-                    <a href="https://www.ast.gr/" target="_blank">
-                        <img src="{% static '/main/img/footer/ast.png' %}" alt="AST" class="footer-content-item-img">
-                    </a>
-                    <h5>DONOR</h5><hr>
-                    <a href="http://www.snf.org/el/" target="_blank">
-                        <img src="{% static '/main/img/footer/ISN.jpg' %}" alt="ISN" class="footer-content-item-img">
-                    </a>
+                    <div class="col-md-4 col-sm-4">
+                        <h5>MEMBERS</h5><hr>
+                        <a href="https://www.auth.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/auth.jpg' %}" alt="Aristotle University Thessaloniki" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.thessaloniki.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/municipality.jpg' %}" alt="Municipality of Thessaloniki" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.uom.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/uom.png' %}" alt="University of Macedonia" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.thessinnozone.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/tiz.jpg' %}" alt="Thessaloniki Innovation Zone" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.teithe.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/ateith.jpg' %}" alt="Alexander Technological Institute Thessaloniki" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.sbbe.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/sbbe.jpg' %}" alt="SBBE" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.ihu.edu.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/ihu.jpg' %}" alt="International Hellenic University" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.seve.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/seve.jpg' %}" alt="SEVE" class="footer-content-item-img">
+                        </a>
+                        </div>
+                    <div class="col-md-4 col-sm-4">
+                        <h5>SPONSORS</h5><hr>
+                        <a href="http://www.hcn.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/hcn.jpg' %}" alt="HCN" class="footer-content-item-img">
+                        </a>
+                        <a href="http://www.beetroot.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/beetroot.png' %}" alt="Beetroot" class="footer-content-item-img">
+                        </a>
+                        <a href="https://www.ast.gr/" target="_blank">
+                            <img src="{% static '/main/img/footer/ast.png' %}" alt="AST" class="footer-content-item-img">
+                        </a>
+                        <h5>DONOR</h5><hr>
+                        <a href="http://www.snf.org/el/" target="_blank">
+                            <img src="{% static '/main/img/footer/ISN.jpg' %}" alt="ISN" class="footer-content-item-img">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -144,7 +146,6 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7E2raajPS5-4vEpx-LBOV0XkItvWQRt8&signed_in=true&callback=initMap"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="http://www.okthess.gr/dev/js/slider.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
