--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -8,7 +8,6 @@ body {
   font-weight: 300;
   font-size: 16px;
   color: black;
-  margin-bottom: 500px;
   padding-bottom: 60px;
 }
 
@@ -437,17 +436,22 @@ h3 {
 }
 
 .site-footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
+  margin: auto;
   height: 500px;
   background-color: white;
   border-top: 3px solid #f9d94f;
 }
 
+.site-footer-content {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
 #social {
   margin-left: 20px;
   margin-bottom: 2px;
+  margin-left: 5%;
 }
 
 #social img {
