--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -507,13 +507,12 @@ h5 {
   color: green;
 }
 
-#copy>a {
+#copy > a {
   color: green;
 }
 
 
 /* news */
-
 .blog-post {
   margin-bottom: 3%;
   display: inline-block;
@@ -540,51 +539,56 @@ h6.blog-post-meta {
   font-weight: 300;
 }
 
-
 /* events */
+.events {
+  width: 90%;
+}
 
-.events img {
+.events-single {
+  margin-bottom: 70px;
+}
+
+.events-single:nth-child(even) {
+  background: #f0f0f0;
+}
+
+.events-single img {
   width: 100%;
-  height: 50px;
 }
 
-.events p {
+.events-single p {
   font-size: 12px;
 }
 
-.event-data {
-  -moz-column-count: 2;
-  -moz-column-gap: 50%;
-  -webkit-column-count: 2;
-  -webkit-column-gap: 50%;
-  column-count: 2;
-  column-gap: 50%;
-}
-
-.event-time {
+.events-single-data-date,
+.events-single-data-time,
+.events-single-data-place,
+.events-single-data-info {
   width: max-content;
-  color: white;
-  background-color: black;
+  color: #fff;
+  background-color: #000;
   padding: 1px 4px;
   font-size: 12px;
-  font-weight: 300;
 }
 
-.event-day {
-  width: max-content;
+.events-single-data-date,
+.events-single-data-place {
+  background: #bbb;
+  color: #000;
   float: right;
-  text-align: right;
-  background-color: grey;
-  padding: 1px 4px;
-  font-size: 12px;
-  font-weight: 300;
 }
-
 
 /* about */
+.about-accordion {
+  margin-left: 6%;
+}
+
+.about-sidebar {
+  margin-right: 20%;
+}
 
 button.accordion {
-  display: inline;
+  display: inline-block;
   width: 100%;
   background-color: #eee;
   color: #444;
@@ -614,17 +618,15 @@ button.accordion.active:after {
   content: "\2212";
 }
 
-div.panel {
+.panel {
   padding: 2px 18px;
-  background-color: white;
+  background-color: #fff;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
 
-
 /* sidebar modules for boxing content */
-
 .sidebar-module {
   padding: 0px;
   margin: 0px;
@@ -660,8 +662,11 @@ div.panel {
   margin-bottom: 0;
 }
 
-
 /* program tabs */
+.program {
+  width: 90%;
+}
+
 .program-main-company {
   margin-bottom: 40px;
 }
