--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -35,20 +35,25 @@
 
 	<link rel="stylesheet" href="{% static '/main/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static '/main/css/style.css' %}">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek" rel="stylesheet">
+
 	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-49294327-5', 'auto');
-	  ga('send', 'pageview');
-  </script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-49294327-5', 'auto');
+        ga('send', 'pageview');
+    </script>
+</head>
+
 <body>
     <nav class="navbar navbar-default">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/logo.png' %}" alt="Logo"></a>
-            <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Apply</strong> for Autumn'17</a>
+            <a class="btn-red btn-header" href="{% url 'main:apply' %}" role="button">
+                <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Apply</strong> for Autumn'17
+            </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
