fix program pages styling

--- a/main/templates/main/program-alumni.html
+++ b/main/templates/main/program-alumni.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-    <div class="container land">
+    <div class="container program">
         <div class="row">
             <div class="col-md-9">
                 <div class="program-main">
