--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -512,10 +512,20 @@ h5 {
 }
 
 
-/* news */
+/* blog */
+.blog {
+  width: 90%;
+}
+
 .blog-post {
-  margin-bottom: 3%;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   display: inline-block;
+}
+
+.blog-post:nth-child(even) {
+  background: #f0f0f0;
 }
 
 .blog-post-image {
