--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -14,15 +14,26 @@
                     Model Fast</strong>, rather than hastily, and to <strong>Meet,
                     Mix and Connect</strong> with like-minded peers.
                 </p>
-                <form>
-                    <input type="text" name="firstname" placeholder="First name" class="input-small">
-                    <br>
-                    <input type="email" name="email" placeholder="Email" class="input-small">
-                </form>
-                <br>
-                <a class="btn-yellow btn-small" href="#" role="button">
-                    <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Get</strong> in the Loop!
-                </a>
+                <div id="mc_embed_signup">
+                    <form action="//okthess.us15.list-manage.com/subscribe/post?u=e5030558dd0a4f89aeed05a0d&amp;id=a3d8e08f2a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <div class="mc-field-group">
+                                <input type="text" value="" name="FNAME" class="input-small" id="mce-FNAME" placeholder="First name">
+                            </div>
+                            <div class="mc-field-group">
+                                <input type="email" value="" name="EMAIL" class="input-small" id="mce-EMAIL" placeholder="Email">
+                            </div>
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e5030558dd0a4f89aeed05a0d_a3d8e08f2a" tabindex="-1" value=""></div>
+                            <div class="clear">
+                                <input type="submit" value="Get in the loop!" name="subscribe" id="mc-embedded-subscribe" class="btn-yellow btn-small">
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
             <div class="col-md-7">
                 <div onclick="plusDivs(-1)" class="slider-arrow-left">&#10094;</div>
