--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -639,6 +639,15 @@ button.accordion.active:after {
   font-size: 20px;
 }
 
+.program-main-company-name a {
+  color: #000;
+}
+
+.program-main-company-desc {
+  height: 100px;
+  overflow-y: scroll;
+}
+
 .program-sidebar-box {
   border: 1px solid #000;
   margin-top: 20px;
