--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -6,120 +6,23 @@
     <div class="container blog">
         <div class="row">
             <div class="col-md-8">
-                <div class="blog-post">
-                    <div class="col-md-3">
-                        <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="blog-post-teaser">
-                            <h4 class="blog-post-title">BMC Workshop</h4>
-                            <h6 class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</h6>
-                            <p>
-                                Ο ρόλος και η χρησιμότητα του Business Model Canvas
-                                στην εξέλιξη μιας startup από επιχειρηματική
-                                ιδέα σε βιώσιμη επιχείρηση.
-                            </p>
-                            <a class="btn-yellow" href="http://localhost:8000/blog/sample-post/" role="button">
-                                <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
-                            </a>
+                {% for post in posts_list %}
+                    <div class="blog-post">
+                        <div class="col-md-3">
+                            <img class="blog-post-image" src="{{ post.image }}">
+                        </div>
+                        <div class="col-md-9">
+                            <div class="blog-post-teaser">
+                                <h4 class="blog-post-title">{{ post.title }}</h4>
+                                <h6 class="blog-post-meta text-muted">Αναρτήθηκε: {{ post.date }}</h6>
+                                <p>{{ post.teaser }}</p>
+                                <a class="btn-yellow" href="{% url 'main:blog_post' post.id %}" role="button">
+                                    <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="blog-post">
-                    <div class="col-md-3">
-                        <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="blog-post-teaser">
-                            <h4 class="blog-post-title">BMC Workshop</h4>
-                            <h6 class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</h6>
-                            <p>
-                                Ο ρόλος και η χρησιμότητα του Business Model Canvas
-                                στην εξέλιξη μιας startup από επιχειρηματική
-                                ιδέα σε βιώσιμη επιχείρηση.
-                            </p>
-                            <a class="btn-yellow" href="http://localhost:8000/blog/sample-post/" role="button">
-                                <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="blog-post">
-                    <div class="col-md-3">
-                        <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="blog-post-teaser">
-                            <h4 class="blog-post-title">BMC Workshop</h4>
-                            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
-                            <p>
-                                Ο ρόλος και η χρησιμότητα του Business Model Canvas
-                                στην εξέλιξη μιας startup από επιχειρηματική
-                                ιδέα σε βιώσιμη επιχείρηση.
-                            </p>
-                            <a class="btn-yellow" href="http://localhost:8000/blog/sample-post/" role="button">
-                                <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="blog-post">
-                    <div class="col-md-3">
-                        <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="blog-post-teaser">
-                            <h4 class="blog-post-title">BMC Workshop</h4>
-                            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
-                            <p>
-                                Ο ρόλος και η χρησιμότητα του Business Model Canvas
-                                στην εξέλιξη μιας startup από επιχειρηματική
-                                ιδέα σε βιώσιμη επιχείρηση.
-                            </p>
-                            <a class="btn-yellow" href="http://localhost:8000/blog/sample-post/" role="button">
-                                <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="blog-post">
-                    <div class="col-md-3">
-                        <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="blog-post-teaser">
-                            <h4 class="blog-post-title">BMC Workshop</h4>
-                            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
-                            <p>
-                                Ο ρόλος και η χρησιμότητα του Business Model Canvas
-                                στην εξέλιξη μιας startup από επιχειρηματική
-                                ιδέα σε βιώσιμη επιχείρηση.
-                            </p>
-                            <a class="btn-yellow" href="http://localhost:8000/blog/sample-post/" role="button">
-                                <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="blog-post">
-                    <div class="col-md-3">
-                        <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="blog-post-teaser">
-                            <h4 class="blog-post-title">BMC Workshop</h4>
-                            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
-                            <p>
-                                Ο ρόλος και η χρησιμότητα του Business Model Canvas
-                                στην εξέλιξη μιας startup από επιχειρηματική
-                                ιδέα σε βιώσιμη επιχείρηση.
-                            </p>
-                            <a class="btn-yellow" href="http://localhost:8000/blog/sample-post/" role="button">
-                                <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
             <div class="col-md-4">
                 <h3>Resources</h3>
